--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <p class="about">At Life Pantry, we're all about celebrating the good life. We're a community of pet parents, foodies, and travel enthusiasts who are passionate about living life to the fullest. We believe that life is meant to be enjoyed, and we're here to help you do just that! </p>
 
     <div class="images">
-    <img src="../images/bacon_bandana.JPG" width = "400" alt="bacon_agility" class="left">
-    <img src="../images/yellowstone_cauldron.jpg" width = "400" alt="yellowstone_buffalo" class="center">
-    <img src="../images/chicken_wings_chopsticks.jpg" width = "400" alt="yellowstone_prism" class="right">
+    <img src="images/bacon_bandana.JPG" width = "400" alt="bacon_agility" class="left">
+    <img src="images/yellowstone_cauldron.jpg" width = "400" alt="yellowstone_buffalo" class="center">
+    <img src="images/chicken_wings_chopsticks.jpg" width = "400" alt="yellowstone_prism" class="right">
     </div>
 
     <h2>Our Mission</h2>
